@@ -15,6 +15,8 @@ import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
+import java.util.Base64.Encoder;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -23,7 +25,6 @@ import java.util.zip.CRC32;
 import javax.annotation.Nonnull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Encoder;
 import yyc.open.component.report.commons.ReportEnums;
 import yyc.open.component.report.commons.file.FileKit;
 import yyc.open.component.report.commons.uuid.UUIDsKit;
@@ -353,7 +354,7 @@ public class ReportTaskRegistry {
 				e.printStackTrace();
 			}
 		}
-		BASE64Encoder encoder = new BASE64Encoder();
-		return "data:img/jpg;base64," + encoder.encode(data);
+		Encoder encoder = Base64.getEncoder();
+		return "data:img/jpg;base64," + encoder.encodeToString(data);
 	}
 }
